@@ -645,5 +645,13 @@ TEST(syncregs)
 	assert_false(regs_sync_enabled());
 }
 
+TEST(mediaprg, IF(not_windows))
+{
+	assert_success(exec_commands("set mediaprg=prg", &lwin, CIT_COMMAND));
+	assert_string_equal("prg", cfg.media_prg);
+	assert_success(exec_commands("set mediaprg=", &lwin, CIT_COMMAND));
+	assert_string_equal("", cfg.media_prg);
+}
+
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
 /* vim: set cinoptions+=t0 filetype=c : */
