@@ -438,6 +438,7 @@ hi User9
 " "histcursor" should be highlighted as 'option'
 " "*quickview" should be highlighted as 'option'
 " "syncregs" should be highlighted as 'option'
+" "mediaprg" should be highlighted as 'option'
 set dotfiles nodotfiles invdotfiles dotfiles!
 set caseoptions
 set sizefmt
@@ -450,6 +451,7 @@ set showtabline stal
 set histcursor
 set quickview noquickview invquickview
 set syncregs
+set mediaprg
 
 " "term" should be highlighted as a function()
 echo term('cmd')
